Fix transaction view card alignment

--- a/src/app/pages/transactions-page/transaction-view/transaction-view.component.scss
+++ b/src/app/pages/transactions-page/transaction-view/transaction-view.component.scss
@@ -1,6 +1,7 @@
 .transaction-view {
   display: flex;
   flex-wrap: wrap;
+  align-items: flex-start;
 }
 
 .transaction-view__content__item {
